# codex-router

./: .gitignore  LICENSE  README.md  pyproject.toml
codex_shim/: __init__.py  catalog.py  cli.py  server.py  settings.py  translate.py
tests/: test_server.py  test_settings_catalog.py  test_translate.py
