[project]
name = "codex-router"
version = "0.1.0"
description = "Local OpenRouter-powered model router for Codex Desktop."
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
]

[project.scripts]
codex-router = "codex_shim.cli:main"
codex-shim = "codex_shim.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
